<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".PolicyActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/policy_bg">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="11.7dp"
        android:layout_marginLeft="11.7dp"
        android:layout_marginBottom="11.7dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="3dp"
        app:cardElevation="3dp"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_gravity="right"
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/amiri_bold"
                android:text="السياسات و الخصوصية"
                android:textColor="@color/txt_color"
                android:textSize="16.7sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/view_line"/>

            <TextView
                android:layout_gravity="right"
                android:layout_marginRight="11dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="السياسات"
                android:textSize="14sp"
                android:fontFamily="@font/amiri_regular"
                android:textColor="@color/dot1"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"/>
            <TextView
                android:layout_gravity="right"
                android:layout_marginRight="11dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="سياسة السلوك المسئ"
                android:textSize="12sp"
                android:fontFamily="@font/amiri_bold"
                android:textColor="@color/walkthrough_txt"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_marginRight="11dp"
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/policy1"
                android:textSize="14sp"
                android:fontFamily="@font/amiri_regular"
                android:textColor="@color/black"
                android:layout_marginLeft="16dp" />

            <TextView
                android:layout_marginRight="11dp"
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="الخصوصية"
                android:textSize="14sp"
                android:fontFamily="@font/amiri_regular"
                android:textColor="@color/dot1"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_marginRight="11dp"
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privcy"
                android:textSize="12sp"
                android:fontFamily="@font/amiri_bold"
                android:textColor="#8f909e"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"/>
            <TextView
                android:layout_marginRight="11dp"
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/panswer"
                android:textSize="12sp"
                android:fontFamily="@font/amiri_regular"
                android:textColor="@color/black"
                android:layout_marginLeft="16dp" />

            <TextView
                android:layout_marginRight="11dp"
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privcy2"
                android:textSize="14sp"
                android:fontFamily="@font/amiri_regular"
                android:textColor="#8f909e"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"/>
            <TextView
                android:layout_marginRight="11dp"
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/panswer2"
                android:textSize="12sp"
                android:fontFamily="@font/amiri_regular"
                android:textColor="@color/black"
                android:layout_marginLeft="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="11.7dp"
                android:background="@color/white"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_disagree"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="لا، أقبل"
                    android:textSize="15sp"
                    android:padding="13sp"
                    android:gravity="center"
                    android:background="@color/cancel"
                    android:fontFamily="@font/amiri_regular"/>

                <View
                    android:layout_width="79dp"
                    android:layout_height="match_parent"
                    android:background="@color/white" />

                <TextView
                    android:id="@+id/tv_agree"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="نعم، أقبل "
                    android:textSize="15sp"
                    android:gravity="center"
                    android:padding="13sp"
                    android:background="@color/green"
                    android:fontFamily="@font/amiri_regular"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
</ScrollView>